src/decklinkcapi/cpp/decklinkcapi.h

typedef void IDeckLinkDeviceNotificationCallback;
typedef void (*deviceNotificationCallback_t)(IDeckLink* device);
CAPI int DisplayModeFlag_ColorspaceRec601(void);
CAPI int DisplayModeFlag_ColorspaceRec709(void);
CAPI int DisplayModeFlag_ColorspaceRec2020(void);
CAPI int Colorspace_Rec601(void);
CAPI int Colorspace_Rec709(void);
CAPI int Colorspace_Rec2020(void);
CAPI bool initDeckLinkAPI(void);
CAPI IDeckLinkDeviceNotificationCallback* IDeckLinkDeviceNotificationCallback_Create(deviceNotificationCallback_t arrivedCallback, deviceNotificationCallback_t removedCallback);