src/main/java/com/loadingbyte/cinecred/natives/decklinkcapi/decklinkcapi_h.java


        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int DisplayModeFlag_ColorspaceRec601()
     * }
     */
    public static FunctionDescriptor DisplayModeFlag_ColorspaceRec601$descriptor() {
        return DisplayModeFlag_ColorspaceRec601.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int DisplayModeFlag_ColorspaceRec601()
     * }
     */
    public static MethodHandle DisplayModeFlag_ColorspaceRec601$handle() {
        return DisplayModeFlag_ColorspaceRec601.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int DisplayModeFlag_ColorspaceRec601()
     * }
     */
    public static MemorySegment DisplayModeFlag_ColorspaceRec601$address() {
        return DisplayModeFlag_ColorspaceRec601.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int DisplayModeFlag_ColorspaceRec601()
     * }
     */
    public static int DisplayModeFlag_ColorspaceRec601() {
        var mh$ = DisplayModeFlag_ColorspaceRec601.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("DisplayModeFlag_ColorspaceRec601");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class DisplayModeFlag_ColorspaceRec709 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("DisplayModeFlag_ColorspaceRec709");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int DisplayModeFlag_ColorspaceRec709()
     * }
     */
    public static FunctionDescriptor DisplayModeFlag_ColorspaceRec709$descriptor() {
        return DisplayModeFlag_ColorspaceRec709.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int DisplayModeFlag_ColorspaceRec709()
     * }
     */
    public static MethodHandle DisplayModeFlag_ColorspaceRec709$handle() {
        return DisplayModeFlag_ColorspaceRec709.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int DisplayModeFlag_ColorspaceRec709()
     * }
     */
    public static MemorySegment DisplayModeFlag_ColorspaceRec709$address() {
        return DisplayModeFlag_ColorspaceRec709.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int DisplayModeFlag_ColorspaceRec709()
     * }
     */
    public static int DisplayModeFlag_ColorspaceRec709() {
        var mh$ = DisplayModeFlag_ColorspaceRec709.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("DisplayModeFlag_ColorspaceRec709");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class DisplayModeFlag_ColorspaceRec2020 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("DisplayModeFlag_ColorspaceRec2020");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int DisplayModeFlag_ColorspaceRec2020()
     * }
     */
    public static FunctionDescriptor DisplayModeFlag_ColorspaceRec2020$descriptor() {
        return DisplayModeFlag_ColorspaceRec2020.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int DisplayModeFlag_ColorspaceRec2020()
     * }
     */
    public static MethodHandle DisplayModeFlag_ColorspaceRec2020$handle() {
        return DisplayModeFlag_ColorspaceRec2020.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int DisplayModeFlag_ColorspaceRec2020()
     * }
     */
    public static MemorySegment DisplayModeFlag_ColorspaceRec2020$address() {
        return DisplayModeFlag_ColorspaceRec2020.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int DisplayModeFlag_ColorspaceRec2020()
     * }
     */
    public static int DisplayModeFlag_ColorspaceRec2020() {
        var mh$ = DisplayModeFlag_ColorspaceRec2020.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("DisplayModeFlag_ColorspaceRec2020");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class Colorspace_Rec601 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("Colorspace_Rec601");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int Colorspace_Rec601()
     * }
     */
    public static FunctionDescriptor Colorspace_Rec601$descriptor() {
        return Colorspace_Rec601.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int Colorspace_Rec601()
     * }
     */
    public static MethodHandle Colorspace_Rec601$handle() {
        return Colorspace_Rec601.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int Colorspace_Rec601()
     * }
     */
    public static MemorySegment Colorspace_Rec601$address() {
        return Colorspace_Rec601.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int Colorspace_Rec601()
     * }
     */
    public static int Colorspace_Rec601() {
        var mh$ = Colorspace_Rec601.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("Colorspace_Rec601");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class Colorspace_Rec709 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("Colorspace_Rec709");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int Colorspace_Rec709()
     * }
     */
    public static FunctionDescriptor Colorspace_Rec709$descriptor() {
        return Colorspace_Rec709.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int Colorspace_Rec709()
     * }
     */
    public static MethodHandle Colorspace_Rec709$handle() {
        return Colorspace_Rec709.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int Colorspace_Rec709()
     * }
     */
    public static MemorySegment Colorspace_Rec709$address() {
        return Colorspace_Rec709.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int Colorspace_Rec709()
     * }
     */
    public static int Colorspace_Rec709() {
        var mh$ = Colorspace_Rec709.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("Colorspace_Rec709");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class Colorspace_Rec2020 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("Colorspace_Rec2020");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int Colorspace_Rec2020()
     * }
     */
    public static FunctionDescriptor Colorspace_Rec2020$descriptor() {
        return Colorspace_Rec2020.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int Colorspace_Rec2020()
     * }
     */
    public static MethodHandle Colorspace_Rec2020$handle() {
        return Colorspace_Rec2020.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int Colorspace_Rec2020()
     * }
     */
    public static MemorySegment Colorspace_Rec2020$address() {
        return Colorspace_Rec2020.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int Colorspace_Rec2020()
     * }
     */
    public static int Colorspace_Rec2020() {
        var mh$ = Colorspace_Rec2020.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("Colorspace_Rec2020");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class initDeckLinkAPI {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_BOOL    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("initDeckLinkAPI");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * _Bool initDeckLinkAPI()
     * }
     */
    public static FunctionDescriptor initDeckLinkAPI$descriptor() {
        return initDeckLinkAPI.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * _Bool initDeckLinkAPI()
     * }
     */
    public static MethodHandle initDeckLinkAPI$handle() {
        return initDeckLinkAPI.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * _Bool initDeckLinkAPI()
     * }
     */
    public static MemorySegment initDeckLinkAPI$address() {
        return initDeckLinkAPI.ADDR;
    }

    /**
     * {@snippet lang=c :
     * _Bool initDeckLinkAPI()
     * }
     */
    public static boolean initDeckLinkAPI() {
        var mh$ = initDeckLinkAPI.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("initDeckLinkAPI");
            }
            return (boolean)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLinkDeviceNotificationCallback_Create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_POINTER,
            decklinkcapi_h.C_POINTER,
            decklinkcapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkDeviceNotificationCallback_Create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }
